// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array fields array 1`] = `
.emotion-2 {
  display: grid;
}

.emotion-4 {
  justify-self: flex-end;
}

.emotion-5 {
  margin-top: 2px;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  outline: 2px solid transparent;
  outline-offset: 2px;
  width: auto;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-margin-end: 0.5rem;
  margin-inline-end: 0.5rem;
}

.emotion-8 {
  width: 1em;
  height: 1em;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
}

.emotion-9 {
  margin-top: 3px;
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control emotion-0"
    role="group"
  >
    <div
      className="emotion-0"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-0"
        />
        <div
          className="emotion-4"
        >
          <div
            className="emotion-5"
          >
            <button
              className="chakra-button array-item-add emotion-6"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="chakra-button__icon emotion-7"
              >
                <svg
                  aria-hidden={true}
                  className="chakra-icon emotion-8"
                  focusable={false}
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Add Item
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-9"
  >
    <button
      className="chakra-button emotion-6"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`array fields checkboxes 1`] = `
.emotion-1 {
  margin-bottom: 1px;
}

.emotion-2 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
}

.emotion-3 {
  -webkit-padding-end: 2rem;
  padding-inline-end: 2rem;
}

.emotion-3:focus,
.emotion-3[data-focus] {
  z-index: unset;
}

.emotion-4 {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-5 {
  margin-top: 3px;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  outline: 2px solid transparent;
  outline-offset: 2px;
  width: auto;
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control emotion-0"
    role="group"
  >
    <div
      className="chakra-form-control emotion-1"
      role="group"
    >
      <div
        className="chakra-select__wrapper emotion-2"
      >
        <select
          autoFocus={false}
          className="chakra-select emotion-3"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          required={false}
          value=""
        >
          <option
            value="a"
          >
            a
          </option>
          <option
            value="b"
          >
            b
          </option>
          <option
            value="c"
          >
            c
          </option>
        </select>
        <div
          className="chakra-select__icon-wrapper emotion-4"
        >
          <svg
            aria-hidden={true}
            className="chakra-select__icon"
            focusable={false}
            role="presentation"
            style={
              Object {
                "color": "currentColor",
                "height": "1em",
                "width": "1em",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-5"
  >
    <button
      className="chakra-button emotion-6"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`array fields fixed array 1`] = `
.emotion-2 {
  display: grid;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 1px;
  padding-bottom: 1px;
}

.emotion-4>*:not(style)~*:not(style) {
  margin-top: 0px;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0.5rem;
  margin-inline-start: 0.5rem;
}

.emotion-5 {
  width: 100%;
}

.emotion-7 {
  margin-bottom: 1px;
}

.emotion-14 {
  margin-top: 3px;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  outline: 2px solid transparent;
  outline-offset: 2px;
  width: auto;
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control emotion-0"
    role="group"
  >
    <div
      className="emotion-0"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-0"
        >
          <div
            className="chakra-stack emotion-4"
          >
            <div
              className="emotion-5"
            >
              <div
                className="chakra-form-control emotion-0"
                role="group"
              >
                <div
                  className="chakra-form-control emotion-7"
                  role="group"
                >
                  <input
                    aria-required={true}
                    autoFocus={false}
                    className="chakra-input emotion-0"
                    disabled={false}
                    id="root_0"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={true}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="chakra-stack emotion-4"
          >
            <div
              className="emotion-5"
            >
              <div
                className="chakra-form-control emotion-0"
                role="group"
              >
                <div
                  className="chakra-form-control emotion-7"
                  role="group"
                >
                  <input
                    aria-required={true}
                    autoFocus={false}
                    className="chakra-input emotion-0"
                    disabled={false}
                    id="root_1"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={true}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-14"
  >
    <button
      className="chakra-button emotion-15"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;
